package org.parcial_X_05_23;

public interface MetodoPago {
    void pagar(int precio, Entrada entrada);
}
