package org.parcial_X_05_23;


import java.util.ArrayList;
import java.util.Arrays;

public class TipoA extends Entrada {
    public TipoA() {
        super(600, new ArrayList<>(Arrays.asList(new Gold(), new PertenenciaH())));
    }
}
