package org.parcial_X_05_23;


import java.util.ArrayList;
import java.util.List;

public class TipoB extends Entrada {
    public TipoB() {
        super(500, new ArrayList<>(List.of(new PertenenciaH())));
    }
}
